[package]
name = "physics"
version = "0.1.0"
authors = ["Eric Nguyen <tuk94307@temple.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.thermodynamics]
path = "./thermodynamics"
version = "0.1.0"

[dependencies.geometry]
path = "./geometry"
version = "0.1.0"

[dependencies.convert]
path = "./convert"
version = "0.1.0"
